회원 등록 수정 조회 api 추가

--- a/src/main/resources/templates/order/orderList.html
+++ b/src/main/resources/templates/order/orderList.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://thymeleaf.org">
 <head th:replace="fragments/header :: header"/>
 <body>
 
@@ -18,7 +18,8 @@
                         <option value="">주문상태</option>
                         <option th:each="status : ${T(jpabook.jpashop.domain.OrderStatus).values()}"
                                 th:value="${status}"
-                                th:text="${status}">option</option>
+                                th:text="${status}">option
+                        </option>
                     </select>
                 </div>
                 <button type="submit" class="btn btn-primary mb-2">검색</button>
